# yygarchive.org

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  LICENSE.md  Procfile  README.md  app.py  build.py  hello.py  index.html  make_sitemap.py  models.py  pyproject.toml  robots.txt  serve.py  style.css
.github/: FUNDING.yml
.github/workflows/: deploy.yml
app/: __init__.py  models.py
app/templates/: about.html  base.html  developer.html  error.html  footer.html  game.html  index.html  page_template.html  search.html
static/: 404.html  robots.txt  style.css
templates/: about.html  base.html  form.html  game.html  index.html  search.html
