[tool.poetry]
name = "yyg-sandbox-search"
version = "0.1.0"
description = ""
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
Flask = "^1.1.2"
peewee = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
